--- a/EEDD/MainWindow.xaml
+++ b/EEDD/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:EEDD"
         xmlns:c="clr-namespace:EEDD.Controls"
         mc:Ignorable="d" d:Background="DimGray"
-        Title="Elektronický dopravní deník" Height="600" Width="1000" MinWidth="800" MinHeight="400" Closing="Window_Closing" Loaded="Window_Loaded" PreviewKeyDown="Window_PreviewKeyDown">
+        Title="DOPRAVNÍ DENÍK" Height="600" Width="1000" MinWidth="800" MinHeight="400" Closing="Window_Closing" Loaded="Window_Loaded" PreviewKeyDown="Window_PreviewKeyDown">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
