--- a/EVAL/App.xaml
+++ b/EVAL/App.xaml
@@ -1,23 +1,32 @@
 ﻿<Application x:Class="EVAL.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:ui="http://schemas.modernwpf.com/2019"
              xmlns:local="clr-namespace:EVAL"
              StartupUri="Windows/ConnectWindow.xaml">
     <Application.Resources>
-        <Style TargetType="{x:Type DataGrid}">
-            <Setter Property="Background" Value="#FFF" />
-            <Setter Property="AlternationCount" Value="2" />
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ui:ThemeResources />
+                <ui:XamlControlsResources />
+            </ResourceDictionary.MergedDictionaries>
 
-        <Style TargetType="{x:Type DataGridRow}">
-            <Style.Triggers>
-                <Trigger Property="ItemsControl.AlternationIndex" Value="0">
-                    <Setter Property="Background" Value="#CCC"></Setter>
-                </Trigger>
-                <Trigger Property="ItemsControl.AlternationIndex" Value="1">
-                    <Setter Property="Background" Value="#EEE"></Setter>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
+            <!--<Style TargetType="{x:Type DataGrid}">
+                <Setter Property="Background" Value="#FFF" />
+                <Setter Property="AlternationCount" Value="2" />
+            </Style>
+
+            <Style TargetType="{x:Type DataGridRow}">
+                <Style.Triggers>
+                    <Trigger Property="ItemsControl.AlternationIndex" Value="0">
+                        <Setter Property="Background" Value="#EEE"></Setter>
+                    </Trigger>
+                    <Trigger Property="ItemsControl.AlternationIndex" Value="1">
+                        <Setter Property="Background" Value="White"></Setter>
+                    </Trigger>
+                </Style.Triggers>
+            </Style>-->
+            
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
