--- a/EVAL/Windows/LoadingWindow.xaml
+++ b/EVAL/Windows/LoadingWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="EVAL.LoadingWindow"
+﻿<Window x:Class="EVAL.Windows.LoadingWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:EVAL"
+        xmlns:local="clr-namespace:EVAL.Windows"
         mc:Ignorable="d" WindowStartupLocation="CenterOwner"
         Title="Načítání..." Height="150" Width="300" ResizeMode="NoResize">
     <Grid>
