--- a/EVAL/App.xaml
+++ b/EVAL/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:ui="http://schemas.modernwpf.com/2019"
+             xmlns:c="clr-namespace:Common.Controls;assembly=Common.Controls"
              xmlns:local="clr-namespace:EVAL"
              StartupUri="Windows/ConnectWindow.xaml">
     <Application.Resources>
@@ -26,7 +27,16 @@
                     </Trigger>
                 </Style.Triggers>
             </Style>-->
-            
+
+            <Style TargetType="{x:Type c:MaskedTextBox}" BasedOn="{StaticResource {x:Type TextBox}}" />
+
+            <Style x:Key="PO" TargetType="{x:Type Label}" BasedOn="{StaticResource {x:Type Label}}">
+                <Setter Property="FontSize" Value="16" />
+                <Setter Property="HorizontalAlignment" Value="Right" />
+                <Setter Property="VerticalAlignment" Value="Bottom" />
+                <Setter Property="Margin" Value="10,8" />
+            </Style>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
