--- a/EVAL/Windows/LoadingWindow.xaml
+++ b/EVAL/Windows/LoadingWindow.xaml
@@ -4,7 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EVAL.Windows"
-        mc:Ignorable="d" WindowStartupLocation="CenterOwner"
+        xmlns:ui="http://schemas.modernwpf.com/2019"
+        ui:WindowHelper.UseModernWindowStyle="True"
+        mc:Ignorable="d" WindowStartupLocation="CenterScreen"
         Title="Načítání..." Height="150" Width="300" ResizeMode="NoResize">
     <Grid>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10">
