--- a/EVAL/Windows/TrainWindow.xaml
+++ b/EVAL/Windows/TrainWindow.xaml
@@ -3,10 +3,173 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:ui="http://schemas.modernwpf.com/2019"
+        xmlns:c="clr-namespace:Common.Controls;assembly=Common.Controls"
         xmlns:local="clr-namespace:EVAL.Windows"
-        mc:Ignorable="d"
-        Title="TrainWindow" Height="450" Width="800">
+        mc:Ignorable="d" ui:WindowHelper.UseModernWindowStyle="True" WindowStartupLocation="CenterScreen" WindowState="Maximized"
+        Title="Úprava vlaku" Height="700" Width="1000" MinWidth="600" MinHeight="200" DataContext="{Binding Train}">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="3*" MinHeight="80"/>
+            <RowDefinition Height="3"/>
+            <RowDefinition Height="2*" MinHeight="80"/>
+            <RowDefinition Height="3"/>
+            <RowDefinition Height="3*" MinHeight="325"/>
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+
+        <TextBox ui:ControlHelper.Header="Číslo vlaku:" IsReadOnly="True" IsReadOnlyCaretVisible="False" IsEnabled="False" Margin="5" />
+        <CheckBox Content="Výchozí na trati" Margin="5" Grid.Row="1" IsEnabled="False" />
+
+        <DatePicker ui:ControlHelper.Header="Datum jízdy:" Grid.Column="1" Margin="5" HorizontalAlignment="Stretch" />
+        <CheckBox Content="Končící na trati" Margin="5" Grid.Row="1" Grid.Column="1" IsEnabled="False" />
+
+        <ListView x:Name="stationList" Grid.Row="3" Grid.ColumnSpan="2" Margin="0,10,0,0" ItemsSource="{Binding Stops}">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Stanice" Width="180" />
+                    <GridViewColumn Header="Kategorie" Width="100" />
+                    <GridViewColumn Header="Číslo" Width="100" />
+                    <GridViewColumn Header="Příjezd" Width="100" />
+                    <GridViewColumn Header="SK příjezd" Width="100" />
+                    <GridViewColumn Header="SK odjezd" Width="100" />
+                    <GridViewColumn Header="Odjezd" Width="100" />
+                    <GridViewColumn Header="Úkony" Width="100" />
+                </GridView>
+            </ListView.View>
+
+            <d:ListView.Items>
+                <DataTemplate />
+                <DataTemplate />
+                <DataTemplate />
+                <DataTemplate />
+                <DataTemplate />
+                <DataTemplate />
+                <DataTemplate />
+            </d:ListView.Items>
+        </ListView>
+
+        <GridSplitter Grid.Row="4" Grid.ColumnSpan="2" Margin="0" HorizontalAlignment="Stretch" ResizeBehavior="PreviousAndNext" />
+
+        <ListView Grid.Row="5" Grid.ColumnSpan="2">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Traťový úsek" Width="300" />
+                    <GridViewColumn Header="Traťová kolej" Width="120" />
+                    <GridViewColumn Header="Jízdní doba" Width="120" />
+                    <GridViewColumn Header="Speciální" Width="200" />
+                </GridView>
+            </ListView.View>
+
+            <d:ListView.Items>
+                <DataTemplate />
+                <DataTemplate />
+                <DataTemplate />
+                <DataTemplate />
+                <DataTemplate />
+                <DataTemplate />
+            </d:ListView.Items>
+        </ListView>
+
+        <GridSplitter Grid.Row="6" Grid.ColumnSpan="2" Margin="0" HorizontalAlignment="Stretch" ResizeBehavior="PreviousAndNext" />
+
+        <Grid Grid.Row="7" Grid.ColumnSpan="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" MinWidth="320" />
+                <ColumnDefinition Width="3" />
+                <ColumnDefinition Width="2*" MinWidth="600" />
+            </Grid.ColumnDefinitions>
+
+            <GroupBox Header="Přidat nebo odebrat stanici" Margin="10,0,10,0">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="10*" />
+                        <ColumnDefinition Width="9*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <ComboBox x:Name="nextStation" ui:ControlHelper.Header="Stanice:" Margin="5" HorizontalAlignment="Stretch" VerticalAlignment="Center" Grid.ColumnSpan="2" />
+                    <Button Content="Přidat stanici" Margin="5" VerticalAlignment="Bottom" Style="{StaticResource AccentButtonStyle}" Click="AddStation_Click" Grid.Row="1" HorizontalAlignment="Stretch" />
+                    <Button Content="Odstranit poslední" Margin="5" VerticalAlignment="Bottom" Grid.Column="1" IsEnabled="False" Grid.Row="1" HorizontalAlignment="Stretch" />
+                </Grid>
+            </GroupBox>
+
+            <GroupBox Header="Upravit stanici" Margin="10,0,10,0" Grid.Column="2">
+                <Grid DataContext="{Binding ElementName=stationList, Path=SelectedItem}">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="100px" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <ComboBox x:Name="category" ui:ControlHelper.Header="Kategorie:" HorizontalAlignment="Stretch" Margin="5" ItemsSource="{Binding Categories}" />
+                    <Label Content="Příjezd:" Grid.Column="1" Style="{StaticResource PO}" />
+                    <ComboBox ui:ControlHelper.Header="Staniční kolej:" HorizontalAlignment="Stretch" Margin="5" Grid.Column="2" />
+                    <c:MaskedTextBox ui:ControlHelper.Header="Příjezd:   (hh:mm:ss)" HorizontalAlignment="Stretch" Margin="5" Grid.Column="3" Mask="00:00:00" MaskChar="_" />
+
+                    <Label Content="Odjezd:" Grid.Column="1" Grid.Row="9" Style="{StaticResource PO}" />
+                    <ui:NumberBox Grid.Row="1" ui:ControlHelper.Header="Číslo vlaku:" Margin="5" />
+                    <ComboBox ui:ControlHelper.Header="Staniční kolej:" HorizontalAlignment="Stretch" Margin="5" Grid.Column="2" Grid.Row="1" />
+                    <c:MaskedTextBox ui:ControlHelper.Header="Odjezd:   (hh:mm:ss)" HorizontalAlignment="Stretch" Margin="5" Grid.Column="3" Grid.Row="1" Mask="00:00:00" MaskChar="_" />
+                </Grid>
+            </GroupBox>
+
+            <GroupBox Header="Upravit traťový úsek" Grid.Row="1" Margin="10,0">
+                <ComboBox ui:ControlHelper.Header="Traťová kolej:" Margin="5" HorizontalAlignment="Stretch" VerticalAlignment="Top" Grid.ColumnSpan="2" />
+            </GroupBox>
+
+            <GridSplitter Grid.Row="0" Grid.RowSpan="2" Margin="0" ResizeBehavior="PreviousAndNext" Grid.Column="1" HorizontalAlignment="Stretch" />
+
+            <Grid Grid.Row="1" Grid.Column="2" Margin="10,-10,10,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <TextBlock Grid.Row="0" Text="Úkony ve stanici:" Margin="5,5,0,0" FontSize="14" />
+                <ListBox x:Name="actions" SelectionMode="Single" Margin="5,5,5,15" Grid.Row="1" VerticalAlignment="Stretch">
+                    <ListBox.Resources>
+                        <Style TargetType="ListBoxItem">
+                            <Style.Resources>
+                                <!-- SelectedItem with focus -->
+                                <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Transparent" />
+                                <!-- SelectedItem without focus -->
+                                <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Transparent" />
+                                <!-- SelectedItem text foreground -->
+                                <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
+                            </Style.Resources>
+                            <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+                        </Style>
+                    </ListBox.Resources>
+
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <VirtualizingStackPanel>
+                                <CheckBox Content="{Binding Name}" IsChecked="{Binding IsSelected}" />
+                            </VirtualizingStackPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
