--- a/EVAL/Windows/TrainWindow.xaml
+++ b/EVAL/Windows/TrainWindow.xaml
@@ -25,11 +25,27 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
-        <TextBox ui:ControlHelper.Header="Číslo vlaku:" IsReadOnly="True" IsReadOnlyCaretVisible="False" IsEnabled="False" Margin="5" />
-        <CheckBox Content="Výchozí na trati" Margin="5" Grid.Row="1" IsEnabled="False" />
+        <TextBox ui:ControlHelper.Header="Číslo vlaku:" IsReadOnly="True" IsReadOnlyCaretVisible="False" IsEnabled="True" Margin="5" Text="{Binding Number}" />
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
 
-        <DatePicker ui:ControlHelper.Header="Datum jízdy:" Grid.Column="1" Margin="5" HorizontalAlignment="Stretch" />
-        <CheckBox Content="Končící na trati" Margin="5" Grid.Row="1" Grid.Column="1" IsEnabled="False" />
+            <CheckBox Name="startsOnRoute" Content="Výchozí na trati:" Margin="5" IsEnabled="True" IsChecked="False"/>
+            <ComboBox Grid.Column="1" Margin="5,0" VerticalAlignment="Center" HorizontalAlignment="Stretch" IsEnabled="{Binding IsChecked, ElementName=startsOnRoute, TargetNullValue=false}" />
+        </Grid>
+
+        <DatePicker ui:ControlHelper.Header="Datum jízdy:" Grid.Column="1" Margin="5" HorizontalAlignment="Stretch" SelectedDate="{Binding Date}" />
+        <Grid Grid.Row="1" Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <CheckBox Name="endsOnRoute" Content="Končící na trati:" Margin="5" IsEnabled="True" />
+            <ComboBox Grid.Column="1" Margin="5,0" VerticalAlignment="Center" HorizontalAlignment="Stretch" IsEnabled="{Binding IsChecked, ElementName=endsOnRoute, TargetNullValue=false}"  />
+        </Grid>
 
         <ListView x:Name="stationList" Grid.Row="3" Grid.ColumnSpan="2" Margin="0,10,0,0" ItemsSource="{Binding Stops}">
             <ListView.View>
@@ -58,13 +74,13 @@
 
         <GridSplitter Grid.Row="4" Grid.ColumnSpan="2" Margin="0" HorizontalAlignment="Stretch" ResizeBehavior="PreviousAndNext" />
 
-        <ListView Grid.Row="5" Grid.ColumnSpan="2">
+        <ListView Grid.Row="5" Grid.ColumnSpan="2" ItemsSource="{Binding Routes}">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Traťový úsek" Width="300" />
+                    <GridViewColumn Header="Traťový úsek" Width="500" />
                     <GridViewColumn Header="Traťová kolej" Width="120" />
-                    <GridViewColumn Header="Jízdní doba" Width="120" />
-                    <GridViewColumn Header="Speciální" Width="200" />
+                    <!--<GridViewColumn Header="Jízdní doba" Width="120" />-->
+                    <GridViewColumn Header="Poznámka" Width="200" />
                 </GridView>
             </ListView.View>
 
